# ygodeck

./: CMakeLists.txt  README.md
binding/: CMakeLists.txt
card/: "A"_Cell_Incubator  1st_Movement_Solo  3-Hump_Lacooda  30,000-Year_White_Turtle  7  7_Colored_Fish  7_Completed  8-Claws_Scorpion  A-Team:_Trap_Disposal_Unit  A_Cat_of_Ill_Omen  A_Deal_with_Dark_Ruler  A_Feint_Plan  A_Legendary_Ocean  A_Major_Upset  A_Wild_Monster_Appears!  Absolute_Crusader  Absolute_End  Absolute_King_Back_Jack  Absorbing_Jar  Abyss-scale_of_the_Kraken  Abyss-scale_of_the_Mizuchi  Abyss-scorn  Abyss-sphere  Abyss-strom  Abyss_Dweller  Abyssal_Designator  Accel_Synchron  Accellight  Accumulated_Fortune  Achacha_Archer  Achacha_Chanbara  Acidic_Downpour  Acrobat_Monkey  Adhesion_Trap_Hole  Advance_Draw  Advance_Zone  Advanced_Heraldry_Art  Aegis_of_the_Ocean_Dragon_Lord  Aerial_Recharge  Aether,_the_Empowering_Dragon  (+4087 more)
data/: .gitignore  card.txt  card_factory.py  carderrors.txt  cardset.txt  cardunique.txt  db_setup.py  formats.txt  schema.sql  scrape.py  scrape_cards.py  scrape_formats.py  scrape_input.txt  scrape_sets.py  set_input.txt
data/card/: "A"_Cell_Breeding_Device  "A"_Cell_Incubator  "A"_Cell_Scatter_Burst  1st_Movement_Solo  3-Hump_Lacooda  30,000-Year_White_Turtle  4-Starred_Ladybug_of_Doom  7  7_Colored_Fish  7_Completed  8-Claws_Scorpion  A-Team:_Trap_Disposal_Unit  A_Cat_of_Ill_Omen  A_D_Changer  A_Deal_with_Dark_Ruler  A_Feather_of_the_Phoenix  A_Feint_Plan  A_Hero_Emerges  A_Hero_Lives  A_Legendary_Ocean  A_Major_Upset  A_Man_with_Wdjat  A_Rival_Appears!  A_Wild_Monster_Appears!  A_Wingbeat_of_Giant_Dragon  Abaki  Abare_Ushioni  Absolute_Crusader  Absolute_End  Absolute_King_Back_Jack  Absorb_Fusion  Absorbing_Jar  Absorbing_Kid_from_the_Sky  Abyss-scale_of_Cetus  Abyss-scale_of_the_Kraken  Abyss-scale_of_the_Mizuchi  Abyss-scorn  Abyss-sphere  Abyss-squall  Abyss-strom  (+6979 more)
data/format/: April_2005  April_2014_OCG  April_2014_TCG  February_2014_OCG  March_2008  March_2010  March_2011  March_2012  October_2014_OCG  October_2014_TCG  September_2008  September_2010
data/xml/: data.xml
db/: schema.sql
example/: CMakeLists.txt
format/: April_2004  April_2004_F  April_2004_L  April_2004_S  April_2005_F  April_2005_L  April_2005_S  April_2006  April_2006_F  April_2006_L  April_2006_S  April_2014_OCG_F  April_2014_OCG_L  April_2014_OCG_S  April_2014_TCG_F  April_2014_TCG_L  April_2014_TCG_S  February_2014_OCG_F  February_2014_OCG_L  February_2014_OCG_S  Illegal  January_2014_TCG  January_2014_TCG_F  January_2014_TCG_L  January_2014_TCG_S  July_2014_OCG  July_2014_OCG_L  July_2014_OCG_S  July_2014_TCG  July_2014_TCG_F  July_2014_TCG_L  July_2014_TCG_S  March_2007  March_2007_F  March_2007_L  March_2007_S  March_2008_F  March_2008_L  March_2008_S  March_2009  (+64 more)
include/: CardSelector.h  DB.h  DBDeck.h  DBDeckSet.h  DBFormat.h  DBUser.h  DeckBuilder.h  UserManager.h
include/deck/: CardSelector.h  Common.h  DB.h  DBCommon.h  DBUser.h  Deck.h  DeckSet.h  Format.h  User.h
include/ygo/deck/: CardSelector.h  Common.h  DB.h  Deck.h  DeckError.h  DeckSet.h  Format.h  User.h
scripts/: load-db  scrape-cards  scrape-formats  scrape_cards  scrape_format
src/: CardSelector.cpp  DB.cpp  DBDeck.cpp  DBDeckSet.cpp  DBFormat.cpp  DBUser.cpp  Deck.cpp  DeckBuilder.cpp  DeckSet.cpp  Format.cpp  User.cpp  UserManager.cpp
test/: CardSelectorTest.cpp  DeckBuilder.cpp  DeckBuilder.h  DeckBuilderUI.cpp  DeckBuilderUI.h  DeckSetTest.cpp  DeckTest.cpp  FormatTest.cpp  UserTest.cpp  main.cpp
xml/: data.xml
